<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app_ms="http://schemas.android.com/apk/res-auto"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@color/colorPrimaryDark">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="14dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="14dp"
                    android:textSize="16sp"
                    android:id="@+id/patient_name_title"
                    android:textColor="@color/white"
                    android:text="@string/title_visiting" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="14dp"
                    android:textSize="16sp"
                    android:id="@+id/patient_name"
                    android:textColor="@color/white"
                    />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="14dp"
                android:layout_marginRight="14dp"
                android:layout_marginTop="6dp"
                android:background="@color/cyan_400"/>

            <LinearLayout
                android:layout_marginTop="14dp"
                android:layout_width="match_parent"
                android:orientation="horizontal"
                android:layout_height="50dp">

                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="match_parent">
                    <TextView
                        android:id="@+id/textViewReferralReason"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="14dp"
                        android:layout_marginRight="14dp"
                        android:layout_centerVertical="true"
                        android:text="@string/referral_reason"
                        android:textColor="@color/white"/>
                    <TextView
                        android:layout_toRightOf="@+id/textViewReferralReason"
                        android:id="@+id/textview_service"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:divider="@null"
                        android:layout_marginLeft="14dp"
                        android:layout_marginRight="14dp"
                        android:textColor="@color/white"
                        android:textSize="12sp"/>


                </RelativeLayout>


            </LinearLayout>
            <LinearLayout
                android:layout_marginTop="14dp"
                android:layout_width="match_parent"
                android:orientation="horizontal"
                android:layout_height="50dp">

                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="match_parent">
                    <TextView
                        android:id="@+id/textViewReferralService"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="14dp"
                        android:layout_marginRight="14dp"
                        android:layout_centerVertical="true"
                        android:text="@string/referral_type"
                        android:textColor="@color/white"/>
                    <TextView
                        android:layout_toRightOf="@+id/textViewReferralService"
                        android:id="@+id/textview_referral"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:divider="@null"
                        android:layout_marginLeft="30dp"
                        android:layout_marginRight="14dp"
                        android:textColor="@color/white"
                        android:textSize="12sp"/>


                </RelativeLayout>


            </LinearLayout>
            <LinearLayout
                android:layout_marginTop="14dp"
                android:layout_width="match_parent"
                android:orientation="horizontal"
                android:layout_height="50dp">

                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="match_parent">
                    <TextView
                        android:id="@+id/textViewReferralfacility"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="14dp"
                        android:layout_marginRight="14dp"
                        android:layout_centerVertical="true"
                        android:text="@string/referral_facility"
                        android:textColor="@color/white"/>
                    <TextView
                        android:layout_toRightOf="@+id/textViewReferralfacility"
                        android:id="@+id/textview_facility"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:divider="@null"
                        android:layout_marginLeft="28dp"
                        android:layout_marginRight="14dp"
                        android:textColor="@color/white"
                        android:textSize="12sp"/>


                </RelativeLayout>


            </LinearLayout>

            <LinearLayout
                android:layout_marginTop="14dp"
                android:layout_marginLeft="14dp"
                android:layout_width="match_parent"
                android:orientation="horizontal"
                android:layout_height="wrap_content">


                <fr.ganfra.materialspinner.MaterialSpinner
                    android:id="@+id/spinnerReason"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="14dp"
                    android:layout_weight="0.5"
                    app:ms_arrowColor="@color/accent"
                    app:ms_arrowSize="12dp"
                    app:ms_baseColor="@color/accent"
                    app:ms_enableFloatingLabel="false"
                    app:ms_hint="@string/hint_missing_reasons"
                    app:ms_hintColor="@color/hint_text"
                    app:ms_multiline="false"
                    app:ms_thickness="1dp"
                    app:paddingEnd="14dp"
                    app:paddingStart="14dp" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="14dp"
                android:layout_marginRight="14dp"
                android:layout_marginTop="14dp"
                android:background="@color/cyan_400"/>


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="4dp"
                android:layout_marginTop="14dp"
                android:background="@color/cyan_900"
                android:paddingBottom="4dp">

                <Button
                    android:layout_width="110dp"
                    android:layout_height="35dp"
                    android:layout_centerVertical="true"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="14dp"
                    android:id="@+id/tuma_button"
                    android:background="@drawable/border_four"
                    android:text="@string/button_save"
                    android:textSize="12sp"
                    android:layout_marginTop="28dp"/>

                <Button
                    android:layout_width="110dp"
                    android:layout_height="35dp"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="14dp"
                    android:layout_toLeftOf="@id/tuma_button"
                    android:id="@+id/cancel_button"
                    android:background="@drawable/border_four"
                    android:text="@string/button_delete"
                    android:textSize="12sp"
                    android:layout_marginTop="30dp"/>

            </RelativeLayout>

        </LinearLayout>

    </ScrollView>

</RelativeLayout>