<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <RelativeLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="72dp"
        android:background="@color/colorPrimaryDark">
        <TextView
            android:layout_marginTop="8dp"
            android:id="@+id/client_name"
            android:layout_gravity="center_horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:textStyle="bold"
            android:text="@string/title_register_client"
            android:textColor="@color/white"
            android:textSize="20sp" />
    </RelativeLayout>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_height="wrap_content">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="16dp"
                android:paddingLeft="16dp"
                android:paddingRight="16dp">
                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <TextView
                            android:id="@+id/textphoneNumber"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:gravity="right"
                            android:layout_marginRight="16dp"
                            android:text="@string/client_phone"
                            android:textStyle="bold"
                            android:textSize="14sp" />

                        <TextView
                            android:id="@+id/viewPhone"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="16dp"
                            android:layout_weight="1"
                            android:hint="@string/client_phone"
                            android:inputType="number"
                            android:textColor="@color/primary_text"
                            android:textColorHint="@color/hint_text"
                            android:textSize="14sp"/>


                    </LinearLayout>

                </RelativeLayout>
                <RelativeLayout
                    android:layout_marginBottom="8dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <TextView
                            android:id="@+id/age"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="0.5"
                            android:text="@string/client_age"
                            android:textStyle="bold"
                            android:gravity="right"
                            android:layout_marginRight="16dp"
                            app:paddingEnd="16dp"
                            app:paddingStart="16dp" />


                        <TextView
                            android:id="@+id/agevalue"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="16dp"
                            android:layout_weight="0.5"
                            android:clickable="true"
                            android:editable="false"
                            android:focusable="false"
                            android:hint="@string/client_age"
                            android:inputType="date"
                            android:textColor="@color/text_black"
                            android:textSize="14sp"/>


                    </LinearLayout>
                </RelativeLayout>
                <RelativeLayout
                    android:layout_marginBottom="8dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="0.5"
                            android:text="@string/client_address"
                            android:textStyle="bold"
                            android:gravity="right"
                            android:layout_marginRight="16dp"
                            app:paddingEnd="16dp"
                            app:paddingStart="16dp" />


                        <TextView
                            android:id="@+id/editTextKijiji"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="16dp"
                            android:layout_weight="0.5"
                            android:clickable="true"
                            android:editable="false"
                            android:focusable="false"
                            android:hint="@string/client_birthday"
                            android:inputType="date"
                            android:textColor="@color/text_black"
                            android:textSize="14sp"/>


                    </LinearLayout>
                </RelativeLayout>
                <RelativeLayout
                    android:layout_marginBottom="8dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="0.5"
                            android:text="Spouse Name"
                            android:textStyle="bold"
                            android:gravity="right"
                            android:layout_marginRight="16dp"
                            app:paddingEnd="16dp"
                            app:paddingStart="16dp" />


                        <TextView
                            android:id="@+id/viewVillageLeader"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="16dp"
                            android:layout_weight="0.5"
                            android:clickable="true"
                            android:editable="false"
                            android:focusable="false"
                            android:textColor="@color/primary_text"
                            android:textSize="14sp"/>


                    </LinearLayout>
                </RelativeLayout>
                <RelativeLayout
                    android:layout_marginBottom="8dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="0.5"
                            android:text="Expected Date Of Delivery"
                            android:textStyle="bold"
                            android:gravity="right"
                            android:layout_marginRight="16dp"
                            app:paddingEnd="16dp"
                            app:paddingStart="16dp" />


                        <TextView
                            android:id="@+id/edd"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="16dp"
                            android:layout_weight="0.5"
                            android:clickable="true"
                            android:editable="false"
                            android:focusable="false"
                            android:textColor="@color/primary_text"
                            android:textSize="14sp"/>


                    </LinearLayout>
                </RelativeLayout>
                <RelativeLayout
                    android:layout_marginBottom="8dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="0.5"
                            android:text="PMTCT Status"
                            android:textStyle="bold"
                            android:gravity="right"
                            android:layout_marginRight="16dp"
                            app:paddingEnd="16dp"
                            app:paddingStart="16dp" />


                        <TextView
                            android:id="@+id/pmtct_status"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="16dp"
                            android:layout_weight="0.5"
                            android:clickable="true"
                            android:editable="false"
                            android:focusable="false"
                            android:textColor="@color/primary_text"
                            android:textSize="14sp"/>


                    </LinearLayout>
                </RelativeLayout>
            </LinearLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="4dp"
                android:layout_marginRight="4dp"
                android:background="@color/cyan_100"
                android:visibility="invisible" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="16dp">

                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="16dp"
                    android:layout_weight="1">
                    <TextView
                        android:textStyle="bold"
                        android:id="@+id/reason_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/black"
                        android:text="@string/referral_reason"/>
                    <TextView
                        android:layout_below="@+id/reason_title"
                        android:id="@+id/reason_for_referral"
                        android:layout_width="match_parent"
                        android:layout_height="48dp"
                        android:layout_weight="0.5"
                        android:textColorHint="@color/hint_text"
                        android:textSize="14sp" />
                    <TextView
                        android:visibility="gone"
                        android:layout_below="@id/reason_for_referral"
                        android:textStyle="bold"
                        android:layout_marginTop="8dp"
                        android:id="@+id/referral_feedback_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/red_500"
                        android:text="@string/referral_feedback"/>
                    <TextView
                        android:visibility="gone"
                        android:layout_below="@id/referral_feedback_title"
                        android:id="@+id/referral_feedback"
                        android:layout_width="match_parent"
                        android:layout_height="48dp"
                        android:layout_weight="0.5"
                        android:textColor="@color/red_500"
                        android:textColorHint="@color/hint_text"
                        android:textSize="14sp" />

                </RelativeLayout>

                <View
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="16dp"
                    android:layout_marginRight="16dp"
                    android:layout_marginTop="16dp"
                    android:background="@color/card_separator" />

                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">

                    <TextView
                        android:id="@+id/facility_title"
                        android:textStyle="bold"
                        android:textColor="@color/black"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/referral_facility"/>
                    <TextView
                        android:id="@+id/viewFacility"
                        android:layout_below="@+id/facility_title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="16dp"
                        app:paddingEnd="16dp"
                        app:paddingStart="16dp"/>

                </RelativeLayout>

                <View
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="16dp"
                    android:layout_marginRight="16dp"
                    android:layout_marginTop="16dp"
                    android:background="@color/card_separator" />

                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">

                    <TextView
                        android:id="@+id/flags_title"
                        android:textStyle="bold"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/danger_signs"
                        android:textColor="@color/black"
                        android:textSize="14sp" />

                    <LinearLayout
                        android:id="@+id/flags_layout"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_below="@id/flags_title"
                        android:orientation="vertical"/>

                </RelativeLayout>

                <View
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="16dp"
                    android:layout_marginRight="16dp"
                    android:layout_marginTop="16dp"
                    android:background="@color/card_separator" />

                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">

                    <TextView
                        android:id="@+id/clinical_information_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/other_info"
                        android:textStyle="bold"
                        android:textColor="@color/black"
                        android:textSize="14sp" />

                    <TextView
                        android:layout_below="@id/clinical_information_title"
                        android:id="@+id/level_of_education"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="8dp"
                        android:hint="@string/title_ctc_number"
                        android:textColor="@color/hint_text"
                        android:textSize="14sp"/>

                </RelativeLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>
